--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
