--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="cat1.jpg" alt="img1">
             </label>
             <label for="checkbox2" class="back text-black">
-                <div>That you're pretty cute...</div>
+                <div>That you're cute...</div>
             </label>
         </div>
 
@@ -43,7 +43,8 @@
                 <img src="micha.jpeg" alt="img1">
             </label>
             <label for="checkbox3" class="back text-black">
-                <div>I just wanna greet you a happy birthday po. At dhil bday mo today I'll be giving back your kisses na binigay mo saken noon. </div>
+                <div>And greet you a happy BIRTHDAY!</div>
+                <div>At dhil bday mo today I am giving back your kisses na binigay mo saken noon. (HAHA)</div>
             </label>
         </div>
 
@@ -52,7 +53,7 @@
                 <img src="kisses.jpeg" alt="img1">
             </label>
             <label for="checkbox4" class="back text-black">
-                <div>Aral lng po tayo ng mabuti and konting tiis nlng makikita mo na si Canada...</div>
+                <div>Aral lng po tayo nang mabuti and konting tiis nlng makikita mo na si Canada...</div>
             </label>
         </div>
 
@@ -61,7 +62,7 @@
                 <img src="CANADA.jpg" alt="img1">
             </label>
             <label for="checkbox5" class="back text-black">
-                <div>You're an amazing person and very kind-hearted. I hope you continue to keep these qualities of yours as it is one of the things that makes you attractive.</div>
+                <div>You're an amazing person and very kind-hearted. I hope you continue to keep these qualities of yours because they make you the extraordinary Micha that you are.</div>
             </label>
         </div>
 
@@ -70,7 +71,7 @@
                 <img src="cat2.jpg" alt="img1">
             </label>
             <label for="checkbox6" class="back text-black">
-                <div>I'm sorry if I don't any photos of you haha puro CODM laro naten lng naka saved sa photos ko po hahha...</div>
+                <div>I'm sorry if I don't photos of you (haha) puro CODM laro naten lng naka saved sa gallery ko po hahha...</div>
             </label>
         </div>
 
@@ -79,7 +80,7 @@
                 <img src="codm3.jpg" alt="img1">
             </label>
             <label for="checkbox7" class="back text-black">
-                <div>Cheer up! and have a great day po... You should be one of the happiest person right now. Huwag mo muna pansinin si codes sakit lng tlga ulo yann hahha. Don't forget to pray always as it is God who can always help us specially in tough times. Ingatz kapo jann palagi and have a great day... "Blessed Happy Birthday Micha!"
+                <div>Cheer up! and have a great day. You should be one of the happiest person right now. Huwag mo muna pansinin si codes sakit lng tlga ulo yann hahha. Don't forget to pray as it is God who can always help us specially in tough times. Ingatz kapo jann palagi and enjoy this wonderful day... "Blessed Happy Birthday Micha!"
                 </div>
             </label>
         </div>
