--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <img src="micha.jpeg" alt="img1">
             </label>
             <label for="checkbox3" class="back text-black">
-                <div>And greet you a happy BIRTHDAY!</div>
-                <div>At dhil bday mo today I am giving back your kisses na binigay mo saken noon. (HAHA)</div>
+                <div>And greet you a happy BIRTHDAY! At dhil bday mo today I am giving back your kisses na binigay mo saken noon. (HAHA)</div>
             </label>
         </div>
 
